[gd_scene load_steps=2 format=3 uid="uid://nb65lbojvm5o"]

[ext_resource type="Script" path="res://addons/bpb_event_editor/row_event_detail_param.gd" id="1_3ouhf"]

[node name="row_event_detail_param" type="HBoxContainer" groups=["bpb_event_system_row_event_detail_param"]]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_3ouhf")

[node name="le_key" type="LineEdit" parent="."]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="le_value" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="le_key" to="." method="_on_le_key_text_changed"]
[connection signal="text_changed" from="le_value" to="." method="_on_le_value_text_changed"]
